Projet_GL/src/test/deca/context/valid/unprovided/binaryOpCmp_eq.deca
// Description:
//   Test des opération de comparaison exacte entre int et float
//
// Resultats:
//    Aucune erreur attendue
// 
// Historique:
//    cree le 13/01/2018

{
	int a = 5;
	float b = 5.0;
	boolean c;
	
	c = (a == b);
	c = (a != b);
	
}
