Projet_GL/src/test/deca/context/invalid/unprovided/badBinaryOp.deca
// Description:
//    Declaration d'une variable de type void
//
// Resultat: Ligne 13
//    ContextualError: Unsupported types for this operation: Operands must be of type float or int
//
// Historique:
//    cree le 24/01/2018

{
	int a = 5;
	boolean b = true;
	a + b;
}
